--- a/usermode/mnemosyne.ini
+++ b/usermode/mnemosyne.ini
@@ -1,6 +1,6 @@
 mcore:
 {
-        segments_dir="/dev/shm/psegments"
+        segments_dir="/pmem-fs/psegments"
         stats_file="mnemosyne.stat"
 }
 
